--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "angular": "angular/bower-angular",
     "ui-router": "angular-ui/ui-router",
     "firebase": "firebase/firebase-bower",
-    "angularfire": "firebase/angularFire"
+    "angularfire": "firebase/angularFire",
+    "simpleLogin": "firebase/firebase-simple-login"
   },
   "dependencies": {
     "underscore": "~1.6.0"
